--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext {
 
 ext.deps = [
         junit               : 'junit:junit:4.12',
+        jsr305              : 'com.google.code.findbugs:jsr305:3.0.0',
         espressocore        : 'com.android.support.test.espresso:espresso-core:2.2.2',
         appcompat           : 'com.android.support:appcompat-v7:25.1.0',
         fresco              : 'com.facebook.fresco:fresco:1.3.0',
