--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ ext.deps = [
         jsr305              : 'com.google.code.findbugs:jsr305:3.0.0',
         espressocore        : 'com.android.support.test.espresso:espresso-core:2.2.2',
         appcompat           : 'com.android.support:appcompat-v7:25.3.1',
+        recyclerview        : 'com.android.support:recyclerview-v7:25.3.1',
         fresco              : 'com.facebook.fresco:fresco:1.3.0',
         fresco_animated_webp: 'com.facebook.fresco:animated-webp:1.3.0',
         fresco_webpsupport  : 'com.facebook.fresco:webpsupport:1.3.0',
