--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,6 +36,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile deps.appcompat
+    compile deps.recyclerview
     testCompile deps.junit
     compile project(':library')
 }
