更新依赖项

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile deps.appcompat
     compile deps.recyclerview
     testCompile deps.junit
+    compile deps.fresco_animated_webp
     compile project(':library')
 }
