--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ ext.deps = [
         appcompat           : 'com.android.support:appcompat-v7:25.3.1',
         recyclerview        : 'com.android.support:recyclerview-v7:25.3.1',
         fresco              : 'com.facebook.fresco:fresco:1.3.0',
+        fresco_animated_base: 'com.facebook.fresco:animated-base:1.3.0',
         fresco_animated_webp: 'com.facebook.fresco:animated-webp:1.3.0',
-        fresco_webpsupport  : 'com.facebook.fresco:webpsupport:1.3.0',
         gson                : 'com.google.code.gson:gson:2.7',
 ]
